--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+# 스프링 애플리케이션 이름 설정
 spring.application.name=board-hole
+
+#server.port=8081
+
+# H2 Database
+# H2 파일 데이터베이스 URL (데이터가 파일에 영구 저장, 다중 클라이언트 접속 지원)
+spring.datasource.url=jdbc:h2:file:./data/boardhole;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE
+# H2 데이터베이스 드라이버 클래스명
+spring.datasource.driverClassName=org.h2.Driver
+# 데이터베이스 접속 사용자명
+spring.datasource.username=sa
+# 데이터베이스 접속 비밀번호 (빈값)
+spring.datasource.password=
+
+# H2 Console (개발용)
+# H2 웹 콘솔 활성화 (http://localhost:8080/h2-console)
+spring.h2.console.enabled=true
+
+# MyBatis
+# MyBatis XML 매퍼 파일 위치 지정
+mybatis.mapper-locations=classpath:mapper/*.xml
+# 도메인 클래스 패키지 별칭 설정 (XML에서 풀패키지명 생략 가능)
+mybatis.type-aliases-package=bunny.boardhole.domain
+
+# SQL 스크립트 실행
+# 파일 모드에서는 데이터 보존을 위해 never로 설정 (첫 실행 시에만 always 사용 후 변경)
+spring.sql.init.mode=always
+# 실행할 스키마 SQL 파일 경로
+spring.sql.init.schema-locations=classpath:schema.sql
