--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -118,3 +118,11 @@ logging:
 # ========================================
 # 서버 관련 공통 설정은 환경별로 다르게 적용됨
 # 필요시 여기에 공통 설정 추가 
+
+# ========================================
+# OpenAPI / Swagger UI 설정 (공통)
+# ========================================
+springdoc:
+  # 스캔 범위 제한 (필요한 API만 포함)
+  paths-to-match:
+    - /api/**
