--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,12 @@ plugins {
     id 'checkstyle'
     id 'org.sonarqube' version '6.3.1.5724'
     id 'com.github.spotbugs' version '6.2.6'
+    id 'net.researchgate.release' version '3.0.2'
+    id 'org.hildan.github.changelog' version '2.2.0'
 }
 
 group = 'bunny'
-version = '0.0.1-SNAPSHOT'
+// version은 gradle.properties에서 관리
 description = 'board-hole'
 
 springBoot {
@@ -82,6 +84,8 @@ dependencies {
     // -- OpenRewrite recipes (static analysis/refactoring) --
     rewrite 'org.openrewrite.recipe:rewrite-spring:6.13.0'
     rewrite 'org.openrewrite.recipe:rewrite-static-analysis:2.16.0'
+
+    // (Removed) REST Docs and restdocs-api-spec
 }
 
 tasks.named('test') {
@@ -92,6 +96,8 @@ tasks.named('test') {
         exceptionFormat = "short"
     }
 }
+// Removed REST Docs related tasks and plugins
+
 
 rewrite {
     activeRecipe('bunny.boardhole.refactor.main')
@@ -183,5 +189,199 @@ task spotbugsConsole {
         } else {
             println "No bugs found! ✅"
         }
+    }
+}
+
+// Semantic Versioning 자동화 설정
+release {
+    failOnCommitNeeded = true
+    failOnPublishNeeded = true
+    failOnSnapshotDependencies = true
+    failOnUnversionedFiles = true
+    failOnUpdateNeeded = true
+    revertOnFail = true
+    
+    tagTemplate = 'v${version}'
+    versionPropertyFile = 'gradle.properties'
+    
+    preCommitText = '[Release]'
+    preTagCommitMessage = 'Release version'
+    newVersionCommitMessage = 'Prepare next version'
+    tagCommitMessage = 'Release version'
+    
+    buildTasks = ['build']
+    
+    git {
+        requireBranch.set('master')
+        pushToRemote.set('origin')
+    }
+}
+
+// Changelog 자동 생성 설정
+changelog {
+    githubUser = 'bunnyxiyo'
+    githubRepository = 'board-hole'
+    
+    outputFile = file("${projectDir}/CHANGELOG.md")
+    
+    // Sections configuration
+    sections = [
+        [title: '✨ New Features', labels: ['feature', 'enhancement', 'feat']],
+        [title: '🐛 Bug Fixes', labels: ['bug', 'fix', 'bugfix']],
+        [title: '📝 Documentation', labels: ['documentation', 'docs']],
+        [title: '♻️ Refactoring', labels: ['refactor', 'refactoring']],
+        [title: '🔧 Maintenance', labels: ['chore', 'maintenance']],
+        [title: '⚡ Performance', labels: ['performance', 'perf']],
+        [title: '🔒 Security', labels: ['security']],
+        [title: '✅ Tests', labels: ['test', 'tests', 'testing']]
+    ]
+    
+    excludeLabels = ['duplicate', 'wontfix', 'invalid', 'question']
+}
+
+// 통합 릴리즈 태스크
+task releaseWithChangelog {
+    group = 'release'
+    description = 'Generate changelog and perform release'
+    dependsOn 'generateChangelog'
+    finalizedBy 'release'
+    
+    doLast {
+        println """
+        ======================================
+        📦 Release Process Started
+        ======================================
+        1. Generating CHANGELOG.md from GitHub PRs/Issues
+        2. Updating version in gradle.properties
+        3. Creating Git tag
+        4. Pushing to remote repository
+        ======================================
+        """
+    }
+}
+
+// 드라이런 태스크
+task releaseDryRun {
+    group = 'release'
+    description = 'Dry run of release process (no actual changes)'
+    
+    doLast {
+        println """
+        ======================================
+        🔍 Release Dry Run
+        ======================================
+        Current version: ${project.version}
+        Next patch version would be: ${project.version.toString().replace('-SNAPSHOT', '').split('\\.').with { 
+            "${it[0]}.${it[1]}.${(it[2] as Integer) + 1}"
+        }}
+        Tag would be: v${project.version.toString().replace('-SNAPSHOT', '')}
+        ======================================
+        Run './gradlew release' to perform actual release
+        Run './gradlew generateChangelog' to preview CHANGELOG
+        ======================================
+        """
+    }
+}
+
+// 내부 패치 버전 관리 태스크들
+task buildAlpha {
+    group = 'release'
+    description = 'Build with alpha version (use -Palpha=1)'
+    
+    doLast {
+        def alphaNumber = project.hasProperty('alpha') ? project.alpha : '1'
+        def alphaVersion = "${project.version.toString().replace('-SNAPSHOT', '')}-alpha.${alphaNumber}"
+        println "Building Alpha Version: ${alphaVersion}"
+    }
+    
+    dependsOn 'build'
+}
+
+task buildBeta {
+    group = 'release'
+    description = 'Build with beta version (use -Pbeta=1)'
+    
+    doLast {
+        def betaNumber = project.hasProperty('beta') ? project.beta : '1'
+        def betaVersion = "${project.version.toString().replace('-SNAPSHOT', '')}-beta.${betaNumber}"
+        println "Building Beta Version: ${betaVersion}"
+    }
+    
+    dependsOn 'build'
+}
+
+task buildRC {
+    group = 'release'
+    description = 'Build with RC version (use -Prc=1)'
+    
+    doLast {
+        def rcNumber = project.hasProperty('rc') ? project.rc : '1'
+        def rcVersion = "${project.version.toString().replace('-SNAPSHOT', '')}-rc.${rcNumber}"
+        println "Building Release Candidate: ${rcVersion}"
+    }
+    
+    dependsOn 'build'
+}
+
+task buildWithGitHash {
+    group = 'release'
+    description = 'Build with git commit hash in version'
+    
+    doLast {
+        def gitHash = 'unknown'
+        try {
+            def stdout = new ByteArrayOutputStream()
+            exec {
+                commandLine 'git', 'rev-parse', '--short', 'HEAD'
+                standardOutput = stdout
+            }
+            gitHash = stdout.toString().trim()
+        } catch (Exception e) {
+            // ignore
+        }
+        
+        def hashVersion = "${project.version}-${gitHash}"
+        println "Building with Git Hash: ${hashVersion}"
+    }
+    
+    dependsOn 'build'
+}
+
+task buildWithTimestamp {
+    group = 'release'
+    description = 'Build with timestamp in version'
+    
+    doLast {
+        def timestamp = new Date().format('yyyyMMddHHmmss')
+        def timestampVersion = "${project.version}-${timestamp}"
+        println "Building with Timestamp: ${timestampVersion}"
+    }
+    
+    dependsOn 'build'
+}
+
+// 버전 정보 출력 태스크
+task showVersion {
+    group = 'release'
+    description = 'Show current project version'
+    
+    doLast {
+        println """
+        ======================================
+        📦 Version Information
+        ======================================
+        Base Version: ${project.version}
+        Group: ${project.group}
+        Project: ${project.name}
+        ======================================
+        Available version types:
+        - Alpha: ./gradlew buildAlpha -Palpha=1
+        - Beta: ./gradlew buildBeta -Pbeta=1
+        - RC: ./gradlew buildRC -Prc=1
+        - Git Hash: ./gradlew buildWithGitHash
+        - Timestamp: ./gradlew buildWithTimestamp
+        - CI Build: ./gradlew build -PbuildNumber=123
+        ======================================
+        """
     }
 }
