--- a/rewrite.yml
+++ b/rewrite.yml
@@ -56,3 +56,35 @@ recipeList:
   - org.openrewrite.java.spring.security6.UpgradeSpringSecurity_6_3
   - org.openrewrite.java.security.SecureRandom
   - org.openrewrite.java.security.UseFilesCreateTempDirectory
+
+---
+type: specs.openrewrite.org/v1beta/recipe
+name: bunny.boardhole.refactor.ValidationReorganization
+displayName: Validation 애너테이션 재구성
+description: Validation 애너테이션을 required/optional 패키지로 재구성합니다
+recipeList:
+  # Board domain - Required validations
+  - org.openrewrite.java.ChangePackage:
+      oldPackageName: bunny.boardhole.board.domain.validation
+      newPackageName: bunny.boardhole.board.domain.validation.required
+      recursive: false
+  # Board domain - Optional validations  
+  - org.openrewrite.java.ChangePackage:
+      oldPackageName: bunny.boardhole.board.domain.validation
+      newPackageName: bunny.boardhole.board.domain.validation.optional
+      recursive: false
+  # User domain - Required validations
+  - org.openrewrite.java.ChangePackage:
+      oldPackageName: bunny.boardhole.user.domain.validation
+      newPackageName: bunny.boardhole.user.domain.validation.required
+      recursive: false
+  # User domain - Optional validations
+  - org.openrewrite.java.ChangePackage:
+      oldPackageName: bunny.boardhole.user.domain.validation
+      newPackageName: bunny.boardhole.user.domain.validation.optional
+      recursive: false
+  # Import optimization
+  - org.openrewrite.java.OrderImports:
+      removeUnused: true
+      classCountToUseStarImport: 2
+      nameCountToUseStarImport: 2
