fix: add gradle.properties to git tracking for version management
- Remove gradle.properties from .gitignore
- Move sensitive credentials to gradle-local.properties
- Add gradle-local.properties.example for developer setup
- Configure build.gradle to load local properties if exists
- Keep only version info in tracked gradle.properties

This fixes GitHub Actions workflow that requires gradle.properties
for automatic version management

--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,7 @@ application-local.yaml
 application-local.properties
 
 ### Security & Credentials ###
-# SonarCloud token and other sensitive properties
-gradle.properties
+# Local developer configuration with sensitive properties
+# (SonarCloud tokens, passwords, etc.)
+gradle-local.properties
+# Note: gradle.properties is tracked for version management
