--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,15 @@
+// Load local properties if they exist (for sensitive credentials)
+def localPropertiesFile = file('gradle-local.properties')
+if (localPropertiesFile.exists()) {
+    def localProperties = new Properties()
+    localProperties.load(new FileInputStream(localPropertiesFile))
+    localProperties.each { key, value ->
+        if (key.startsWith("systemProp.")) {
+            System.setProperty(key.substring(11), value)
+        }
+    }
+}
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.5.5'
