fix(ci): add write permissions to GitHub Actions workflows
- Add contents:write permission for version updates and tags
- Add pull-requests:write permission for PR creation
- Add issues:write permission for hotfix workflow

This fixes the 403 permission error when GitHub Actions bot
tries to push version updates to develop branch

--- a/.github/workflows/hotfix.yml
+++ b/.github/workflows/hotfix.yml
@@ -13,6 +13,10 @@ on:
 jobs:
   emergency-fix:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      issues: write
     
     steps:
       - name: Checkout code
