--- a/.github/workflows/develop-versioning.yml
+++ b/.github/workflows/develop-versioning.yml
@@ -11,6 +11,9 @@ jobs:
   auto-version:
     if: github.event_name == 'push' || (github.event.pull_request.merged == true)
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     
     steps:
       - name: Checkout code
