--- a/.github/workflows/main-release.yml
+++ b/.github/workflows/main-release.yml
@@ -11,6 +11,9 @@ jobs:
   release:
     if: github.event_name == 'push' || (github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/'))
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     
     steps:
       - name: Checkout code
