--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Project Version (managed by release plugin - DO NOT EDIT MANUALLY)
-version=0.0.1-dev.2
+version=1.0.0
 
 # Gradle Performance Settings
 org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
