--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,11 @@ dependencies {
     testImplementation 'com.h2database:h2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     
+    // -- RestAssured for E2E testing --
+    testImplementation 'io.rest-assured:rest-assured:5.5.0'
+    testImplementation 'io.rest-assured:json-path:5.5.0'
+    testImplementation 'io.rest-assured:xml-path:5.5.0'
+    
     // -- TestContainers for real SMTP testing --
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'com.icegreen:greenmail-junit5:2.1.5'
@@ -102,6 +107,9 @@ dependencies {
     rewrite 'org.openrewrite.recipe:rewrite-static-analysis:2.16.0'
 
     // (Removed) REST Docs and restdocs-api-spec
+
+    // -- Resilience / Retry --
+    implementation 'org.springframework.retry:spring-retry'
 }
 
 tasks.named('test') {
