--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -3,5 +3,10 @@ spring:
     exclude:
       - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
       - org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
-  datasource:
-    url: jdbc:h2:mem:testdb;MODE=MySQL  # MySQL 호환 모드만 명시
+  
+  jpa:
+    hibernate:
+      ddl-auto: create  # Testcontainers가 자동으로 컨테이너를 삭제하므로 create만 사용
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
