--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,15 +52,10 @@ boardhole:
       slow-threshold-ms: 1000
       duration-threshold-ms: 1000
   
-  # 이메일 검증 관련 설정 - JWT 기반 인증으로 전환 예정
-  # validation:
-  #   email-verification:
-  #     expiration-ms: 7200000
-  
   # CORS 기본값 (환경별 프로필에서 오버라이드 권장)
   cors:
     path-patterns: "/api/**"
-    allowed-origins: "*"
+    allowed-origins: "http://localhost:8080,http://127.0.0.1:8080"
     allowed-methods: "GET,POST,PUT,DELETE,OPTIONS"
     allowed-headers: "Origin,Content-Type,Accept,Authorization,X-Requested-With"
     exposed-headers: # 의도적으로 비움
@@ -177,3 +172,10 @@ boardhole:
     license:
       name: Apache 2.0
       url: https://www.apache.org/licenses/LICENSE-2.0
+
+  # 유효성 기본값 (테스트 기대와 일치)
+  validation:
+    board:
+      title-max-length: 200
+    user:
+      username-min-length: 3
