--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     // -- Dev only --
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 
+    // -- Actuator (Observability) --
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
     // -- Testing --
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -87,6 +90,9 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:5.5.6'
     testImplementation 'io.rest-assured:json-path:5.5.6'
     testImplementation 'io.rest-assured:xml-path:5.5.6'
+
+    // -- Testing utilities --
+    testImplementation 'org.awaitility:awaitility:4.2.0'
 
 }
 
