chore: 사용되지 않는 application.yml 설정 정리
- boardhole.auth.default-role 설정 제거 (사용되지 않음)
- boardhole.performance.logging → boardhole.logging.performance 경로 수정
- boardhole.validation 섹션 제거 (Java 상수 클래스 사용)
- 불필요한 속성 정리 (slow-threshold, duration-threshold 제거)

이제 LoggingProperties가 올바른 설정을 읽어올 수 있으며,
유효성 검사는 ValidationConstants 클래스의 컴파일 타임 상수만 사용합니다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,22 +35,11 @@ server:
 # 애플리케이션 도메인 설정
 # ========================================
 boardhole:
-  # 보안 설정
-  security:
-    role-prefix: "ROLE_"
-    session-timeout-minutes: 30
-  
-  # 인증 설정
-  auth:
-    default-role: "USER"
-
-  # 성능 임계값
-  performance:
-    logging:
-      fast-threshold-ms: 100
-      normal-threshold-ms: 500
-      slow-threshold-ms: 1000
-      duration-threshold-ms: 1000
+  # 로깅 성능 임계값
+  logging:
+    performance:
+      fast-threshold: 100
+      normal-threshold: 500
   
   # CORS 기본값 (환경별 프로필에서 오버라이드 권장)
   cors:
@@ -173,9 +162,3 @@ boardhole:
       name: Apache 2.0
       url: https://www.apache.org/licenses/LICENSE-2.0
 
-  # 유효성 기본값 (테스트 기대와 일치)
-  validation:
-    board:
-      title-max-length: 200
-    user:
-      username-min-length: 3
