--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     // Email dependencies removed - will be replaced with JWT-based email verification later
     // implementation 'org.springframework.boot:spring-boot-starter-mail'
-    // implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    // -- View (Thymeleaf) --
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
 
     // -- Development Tools --
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
